Bug 1218008 - Fix progress bar rendering on the Ambiance GTK3 theme. r=karlt a=lizzard

--HG--
extra : commitid : Gzh5VR5iFys
extra : source : 41d905020339049e2e495f3fa71908d5d44f7f82
extra : intermediate-source : b50c13a2d7bb3347656485d2f67fa05f789a4c42